rust-examples/tests/compile-fail/Rule_16_7.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let i = true;

    match i as bool {
        false => {},
        _ => {},
    }
}
